--- a/notebooks/day-3.ipynb
+++ b/notebooks/day-3.ipynb
@@ -279,7 +279,7 @@
     "\n",
     "\n",
     "# 共起頻度行列を Jaccard 係数行列に変換する\n",
-    "def jaccard_coef(cooccur_df):\n",
+    "def jaccard_coef(cooccur_df, cross_df):\n",
     "\n",
     "    Xc = cooccur_df.values\n",
     "    Xj = np.zeros(Xc.shape)\n",
@@ -287,7 +287,7 @@
     "\n",
     "    for i, j in zip(*Xc.nonzero()):\n",
     "        if i < j:\n",
-    "            Xj[i,j] = Xc[i,j] / (Xc[i,j] + Xc_sum[i] + Xc_sum[j])\n",
+    "            Xj[i,j] = Xc[i,j] / (Xc_sum[i] + Xc_sum[j] - Xc[i,j])\n",
     "\n",
     "    jaccard_df = pd.DataFrame(Xj, columns=cooccur_df.columns, index=cooccur_df.columns)\n",
     "\n",
@@ -360,9 +360,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_excel(\"rakuten-1000-2022-2023.xlsx\")\n",
-    "print(df.shape)\n",
-    "display(df.head())"
+    "all_df = pd.read_excel(\"rakuten-1000-2022-2023.xlsx\")\n",
+    "print(all_df.shape)\n",
+    "display(all_df.head())"
    ]
   },
   {
@@ -395,7 +395,7 @@
     "\n",
     "tagger = MeCab.Tagger(\"-r ../tools/usr/local/etc/mecabrc --unk-feature 未知語\")\n",
     "\n",
-    "word_counts = defaultdict(lambda: 1)\n",
+    "word_counts = defaultdict(lambda: 0)\n",
     "words = []\n",
     "\n",
     "ZEN = \"\".join(chr(0xff01 + i) for i in range(94))\n",
@@ -405,7 +405,7 @@
     "# stopwords = ['する', 'ある', 'ない', 'いう', 'もの', 'こと', 'よう', 'なる', 'ほう']\n",
     "stopwords = [\"湯畑\"]\n",
     "\n",
-    "for index, row in df.iterrows():\n",
+    "for index, row in all_df.iterrows():\n",
     "    node = tagger.parseToNode(row[\"コメント\"].translate(HAN2ZEN))\n",
     "    while node:\n",
     "        features = node.feature.split(',')\n",
@@ -616,7 +616,7 @@
    },
    "outputs": [],
    "source": [
-    "jaccard_df = jaccard_coef(cooccur_df)\n",
+    "jaccard_df = jaccard_coef(cooccur_df, cross_df)\n",
     "print(jaccard_df.shape)\n",
     "display(jaccard_df.head())"
    ]
@@ -721,10 +721,10 @@
     "# stopwords = ['する', 'ある', 'ない', 'いう', 'もの', 'こと', 'よう', 'なる', 'ほう']\n",
     "stopwords = ['*']\n",
     "\n",
-    "pair_counts = defaultdict(lambda: 1)\n",
+    "pair_counts = defaultdict(lambda: 0)\n",
     "pairs = []\n",
     "\n",
-    "for index, row in df.iterrows():\n",
+    "for index, row in all_df.iterrows():\n",
     "    # print(cp.parseToString(row[\"コメント\"].translate(HAN2ZEN)))\n",
     "    tree = cp.parse(row[\"コメント\"].translate(HAN2ZEN))\n",
     "\n",
