--- a/notebooks/day-4.ipynb
+++ b/notebooks/day-4.ipynb
@@ -124,7 +124,7 @@
     "\n",
     "\n",
     "# 共起頻度行列を Jaccard 係数行列に変換する\n",
-    "def jaccard_coef(cooccur_df):\n",
+    "def jaccard_coef(cooccur_df, cross_df):\n",
     "\n",
     "    Xc = cooccur_df.values\n",
     "    Xj = np.zeros(Xc.shape)\n",
@@ -132,7 +132,7 @@
     "\n",
     "    for i, j in zip(*Xc.nonzero()):\n",
     "        if i < j:\n",
-    "            Xj[i,j] = Xc[i,j] / (Xc[i,j] + Xc_sum[i] + Xc_sum[j])\n",
+    "            Xj[i,j] = Xc[i,j] / (Xc_sum[i] + Xc_sum[j] - Xc[i,j])\n",
     "\n",
     "    jaccard_df = pd.DataFrame(Xj, columns=cooccur_df.columns, index=cooccur_df.columns)\n",
     "\n",
@@ -175,7 +175,86 @@
     "    plt.xlabel(f\"Dim 1 ({explained_inertia[0]*100:.3f}%)\")\n",
     "    plt.ylabel(f\"Dim 2 ({explained_inertia[1]*100:.3f}%)\")\n",
     "    # plt.axis('equal')\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "# 共起ネットワークを描画する (外部変数-抽出語用)\n",
+    "def plot_cooccur_network2(df, attr_counts, word_counts, cutoff):\n",
+    "\n",
+    "    import networkx as nx\n",
+    "    from networkx.algorithms import community\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import japanize_matplotlib\n",
+    "    from networkx.drawing.nx_agraph import graphviz_layout\n",
+    "    %matplotlib inline\n",
+    "\n",
+    "    Xc = df.values\n",
+    "    Xc_max = Xc.max()\n",
+    "\n",
+    "    attrs = list(df.index)\n",
+    "    attr_count_max = attr_counts.max()\n",
+    "\n",
+    "    words = list(df.columns)\n",
+    "    word_count_max = word_counts.max()\n",
+    "\n",
+    "    weights_n, weights_c = [], []\n",
+    "    for i, j in zip(*Xc.nonzero()):\n",
+    "        if Xc[i,j] > cutoff:\n",
+    "            weights_n.append((attrs[i], {'weight': attr_counts[i] / attr_count_max, 'type': 'attr'}))\n",
+    "            weights_n.append((words[j], {'weight': word_counts[j] / word_count_max, 'type': 'word'}))\n",
+    "            weights_c.append((attrs[i], words[j], Xc[i,j] / Xc_max))\n",
+    "\n",
+    "    G = nx.Graph()\n",
+    "    G.add_nodes_from(weights_n)\n",
+    "    G.add_weighted_edges_from(weights_c)\n",
+    "    G.remove_nodes_from(list(nx.isolates(G)))\n",
+    "    # G = nx.minimum_spanning_tree(G)\n",
+    "\n",
+    "    plt.figure(figsize=(10, 10))\n",
+    "    # pos = nx.spring_layout(G, k=0.3)\n",
+    "    pos = graphviz_layout(G, prog='neato', args='-Goverlap=\"scalexy\" -Gsep=\"+6\" -Gnodesep=0.8 -Gsplines=\"polyline\" -GpackMode=\"graph\" -Gstart={}'.format(43))\n",
+    "\n",
+    "    nodelist_a = [node for node in G.nodes if G.nodes[node]['type'] == 'attr']\n",
+    "    nodelist_w = [node for node in G.nodes if G.nodes[node]['type'] == 'word']\n",
+    "    weights_a = np.array([G.nodes[node]['weight'] for node in G.nodes if G.nodes[node]['type'] == 'attr'])\n",
+    "    weights_w = np.array([G.nodes[node]['weight'] for node in G.nodes if G.nodes[node]['type'] == 'word'])\n",
+    "    weights_e = np.array(list(nx.get_edge_attributes(G, 'weight').values()))\n",
+    "\n",
+    "    color_map = []\n",
+    "    for node in G:\n",
+    "        if G.nodes[node]['type'] == 'word':\n",
+    "            color_map.append(G.degree(node)+3)\n",
+    "\n",
+    "    nx.draw_networkx_nodes(G, pos, node_color='lightsalmon', alpha=0.7, cmap=plt.cm.Set2, node_size=1000 * weights_a, nodelist=nodelist_a, node_shape='s')\n",
+    "    nx.draw_networkx_nodes(G, pos, node_color=color_map, alpha=0.7, cmap=plt.cm.Set2, node_size=5000 * weights_w, nodelist=nodelist_w)\n",
+    "    nx.draw_networkx_edges(G, pos, edge_color='gray', edge_cmap=plt.cm.Blues, alpha=0.7, width=3 * weights_e)\n",
+    "    nx.draw_networkx_labels(G, pos, font_family='IPAexGothic')\n",
+    "\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "# 共起頻度行列を Jaccard 係数行列に変換する (外部変数-抽出語用)\n",
+    "def jaccard_coef2(df, attr_counts, word_counts, total=10000, conditional=True):\n",
+    "\n",
+    "    Xc = df.values\n",
+    "    Xj = np.zeros(df.shape)\n",
+    "\n",
+    "    for i, j in zip(*Xc.nonzero()):\n",
+    "        conditional_prob = Xc[i,j] / attr_counts[i]\n",
+    "        assumption_prob = word_counts[j] / total\n",
+    "\n",
+    "        if conditional:\n",
+    "            if conditional_prob > assumption_prob:\n",
+    "                Xj[i,j] = Xc[i,j] / (attr_counts[i] + word_counts[j] - Xc[i,j])\n",
+    "            else:\n",
+    "                Xj[i,j] = .0\n",
+    "        else:\n",
+    "            Xj[i,j] = Xc[i,j] / (attr_counts[i] + word_counts[j] - Xc[i,j])\n",
+    "\n",
+    "    jaccard_df = pd.DataFrame(Xj, columns=df.columns, index=df.index)\n",
+    "\n",
+    "    return jaccard_df"
    ]
   },
   {
@@ -244,9 +323,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_excel(\"rakuten-1000-2022-2023.xlsx\")\n",
-    "print(df.shape)\n",
-    "display(df.head())"
+    "all_df = pd.read_excel(\"rakuten-1000-2022-2023.xlsx\")\n",
+    "print(all_df.shape)\n",
+    "display(all_df.head())"
    ]
   },
   {
@@ -279,7 +358,7 @@
     "\n",
     "tagger = MeCab.Tagger(\"-r ../tools/usr/local/etc/mecabrc --unk-feature 未知語\")\n",
     "\n",
-    "word_counts = defaultdict(lambda: 1)\n",
+    "word_counts = defaultdict(lambda: 0)\n",
     "words = []\n",
     "\n",
     "ZEN = \"\".join(chr(0xff01 + i) for i in range(94))\n",
@@ -289,7 +368,7 @@
     "# stopwords = ['する', 'ある', 'ない', 'いう', 'もの', 'こと', 'よう', 'なる', 'ほう']\n",
     "stopwords = [\"湯畑\"]\n",
     "\n",
-    "for index, row in df.iterrows():\n",
+    "for index, row in all_df.iterrows():\n",
     "    node = tagger.parseToNode(row[\"コメント\"].translate(HAN2ZEN))\n",
     "    while node:\n",
     "        features = node.feature.split(',')\n",
@@ -489,7 +568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jaccard_df = jaccard_coef(cooccur_df)\n",
+    "jaccard_df = jaccard_coef(cooccur_df, cross_df)\n",
     "\n",
     "word_counts = cross_df.sum(axis=0).values\n",
     "plot_cooccur_network(jaccard_df, word_counts, np.sort(jaccard_df.values.reshape(-1))[::-1][60])"
@@ -853,12 +932,162 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a57a8a63-6ee0-42f3-9f0d-3140ae15077f",
+   "metadata": {},
+   "source": [
+    "「文書-抽出語」 表を {0,1} に変換する"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "864bfc9d-a5ef-49ad-a1e5-b1f43c9b88e8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cross_df[cross_df > 0] = 1\n",
+    "print(cross_df.shape)\n",
+    "display(cross_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9829af2-8396-410f-beff-72742b94bc3d",
+   "metadata": {},
+   "source": [
+    "「外部変数-抽出語」 表を作成する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0a279ff-27ff-40aa-b60f-3c73f279458f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_cross_df = cross_df.groupby(level='カテゴリー').sum()\n",
+    "area_cross_df = cross_df.groupby(level='エリア').sum()\n",
+    "aggregate_df = pd.concat([category_cross_df, area_cross_df])\n",
+    "print(aggregate_df.shape)\n",
+    "display(aggregate_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c992c29-2db9-4408-ab68-457c99d95139",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "word_counts = cross_df.sum(axis=0).values\n",
+    "word_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49536b7e-ed50-4e5b-9254-fd968b9929f4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "attr_counts = np.hstack([all_df.value_counts('カテゴリー').values, all_df.value_counts('エリア').values])\n",
+    "attr_counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "693ee830-ea63-48ee-8cad-0ca1ba0c7bed",
+   "metadata": {},
+   "source": [
+    "「外部変数-抽出語」 表を Jaccard 係数表に変換する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32f3feb2-82de-439e-8ed4-a83a7af0e209",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "jaccard_df = jaccard_coef2(aggregate_df, attr_counts, word_counts, total=10000, conditional=False)\n",
+    "print(jaccard_df.shape)\n",
+    "display(jaccard_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "300f315f-3c35-4e1d-8fbf-f513be133e9a",
+   "metadata": {},
+   "source": [
+    "#### (1) カテゴリー・エリア別の抽出語リストを作成する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8985d3f9-9828-4906-9579-e5b8a90b0930",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_list = []\n",
+    "for index, row in jaccard_df.iterrows():\n",
+    "    df_list.append(row.iloc[np.argsort(row.values)[::-1][:10]].reset_index())\n",
+    "\n",
+    "df = pd.DataFrame(pd.concat(df_list, axis=1))\n",
+    "df.columns = np.array([c for pair in [[x,f\"jaccard\"] for x in jaccard_df.index] for c in pair], dtype='object')\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd3b952a-5711-4ce0-9421-d989b1ccb2ec",
+   "metadata": {},
+   "source": [
+    "#### (2) カテゴリーと抽出語の共起ネットワーク"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00d0418c-9b4c-4207-974d-f27b2a7a0652",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plot_cooccur_network2(jaccard_df.iloc[0:2,], attr_counts[0:2], word_counts, np.sort(jaccard_df.iloc[0:2,].values.reshape(-1))[::-1][60])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fb14408-1b1d-41e0-80ff-91fb04e08d95",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### (3) エリアと抽出語の共起ネットワーク"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c6c9b7f-e197-43e5-b96e-522f139d2c5e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plot_cooccur_network2(jaccard_df.iloc[2:,], attr_counts[2:], word_counts, np.sort(jaccard_df.iloc[2:,].values.reshape(-1))[::-1][60])"
+   ]
   }
  ],
  "metadata": {
