--- a/notebooks/day-3.ipynb
+++ b/notebooks/day-3.ipynb
@@ -90,6 +90,13 @@
     "import warnings\n",
     "warnings.simplefilter('ignore')\n",
     "\n",
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "seed = 42\n",
+    "random.seed(seed)\n",
+    "np.random.seed(seed)\n",
+    "\n",
     "# ワードクラウドを描画する\n",
     "def plot_wordcloud(word_str, width=6, height=4):\n",
     "\n",
@@ -106,7 +113,7 @@
     "def plot_wordcloud_ax(ax, word_str):\n",
     "\n",
     "    font_path = !find ${HOME} -name \"ipaexg.ttf\"\n",
-    "    # font_path='/Library/Fonts/Arial Unicode.ttf'\n",
+    "    # font_path = ['/Library/Fonts/Arial Unicode.ttf']\n",
     "\n",
     "    import wordcloud\n",
     "\n",
@@ -123,7 +130,7 @@
     "def plot_topic_model(lda, feature_names, n_top_words=20, width=10, height=4):\n",
     "\n",
     "    font_path = !find ${HOME} -name \"ipaexg.ttf\"\n",
-    "    # font_path='/Library/Fonts/Arial Unicode.ttf'\n",
+    "    # font_path = ['/Library/Fonts/Arial Unicode.ttf']\n",
     "\n",
     "    import matplotlib.pyplot as plt\n",
     "    import wordcloud\n",
