--- a/notebooks/day-4.ipynb
+++ b/notebooks/day-4.ipynb
@@ -7,8 +7,22 @@
     "tags": []
    },
    "source": [
-    "# day 4\n",
-    "\n",
+    "# day 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c37b43ff",
+   "metadata": {},
+   "source": [
+    "このノートブックの実行例は[こちら(HTML版)](../notebooks-sample/day-4.html)で確認できます"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7303c7b",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
@@ -76,6 +90,13 @@
     "import warnings\n",
     "warnings.simplefilter('ignore')\n",
     "\n",
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "seed = 42\n",
+    "random.seed(seed)\n",
+    "np.random.seed(seed)\n",
+    "\n",
     "# ワードクラウドを描画する\n",
     "def plot_wordcloud(word_str, width=6, height=4):\n",
     "\n",
@@ -92,7 +113,7 @@
     "def plot_wordcloud_ax(ax, word_str):\n",
     "\n",
     "    font_path = !find ${HOME} -name \"ipaexg.ttf\"\n",
-    "    # font_path='/Library/Fonts/Arial Unicode.ttf'\n",
+    "    # font_path = ['/Library/Fonts/Arial Unicode.ttf']\n",
     "\n",
     "    import wordcloud\n",
     "\n",
@@ -109,7 +130,7 @@
     "def plot_topic_model(lda, feature_names, n_top_words=20, width=10, height=4):\n",
     "\n",
     "    font_path = !find ${HOME} -name \"ipaexg.ttf\"\n",
-    "    # font_path='/Library/Fonts/Arial Unicode.ttf'\n",
+    "    # font_path = ['/Library/Fonts/Arial Unicode.ttf']\n",
     "\n",
     "    import matplotlib.pyplot as plt\n",
     "    import wordcloud\n",
@@ -1237,7 +1258,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "638cc3ed",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
