--- a/notebooks/day-2-1.ipynb
+++ b/notebooks/day-2-1.ipynb
@@ -275,7 +275,7 @@
    },
    "outputs": [],
    "source": [
-    "!bash ../scripts/install_mecab.sh > install_mecab.log 2>&1\n",
+    "!bash ../scripts/install_mecab.sh >> install_mecab.log 2>&1\n",
     "!tail -n 1 install_mecab.log"
    ]
   },
@@ -306,7 +306,7 @@
    },
    "outputs": [],
    "source": [
-    "!bash ../scripts/install_cabocha.sh > install_cabocha.log 2>&1\n",
+    "!bash ../scripts/install_cabocha.sh >> install_cabocha.log 2>&1\n",
     "!tail -n 1 install_cabocha.log"
    ]
   },
