--- a/notebooks/day-5.ipynb
+++ b/notebooks/day-5.ipynb
@@ -1433,6 +1433,200 @@
     "# CSV に保存する\n",
     "result_df.to_csv(\"output-2.csv\", header=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c67e21e-d43b-402a-9dd6-aa5a28f436d1",
+   "metadata": {},
+   "source": [
+    "## Appendix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51996331-9be0-475a-9496-fcc4a88580f4",
+   "metadata": {},
+   "source": [
+    "### A.1 辞書追加"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41df777b-13cf-474c-903d-b49ede039caa",
+   "metadata": {},
+   "source": [
+    "#### A.1.1 辞書追加前の確認"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3286e64-ebdf-4457-b2fb-9a338d828354",
+   "metadata": {},
+   "source": [
+    "(1) 辞書追加前に MeCab の解析結果を確認する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f8f6656-0f22-4a4d-af52-f1aff0556f26",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import MeCab\n",
+    "\n",
+    "tagger = MeCab.Tagger(\"-r ../tools/usr/local/etc/mecabrc\")\n",
+    "print(tagger.parse(\"この泉質は極上です\"))\n",
+    "print(tagger.parse(\"この海鮮丼は美味しいです\"))\n",
+    "print(tagger.parse(\"近くにスカイツリーがあります\"))\n",
+    "print(tagger.parse(\"浴室にバスタオルがありません\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c776d73-84bd-44cf-a1ed-a9b824cf7d0f",
+   "metadata": {},
+   "source": [
+    "(2) 辞書追加前に CaboCha の解析結果を確認する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df0f58c2-59fe-494e-99f2-3694eea47fd5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import CaboCha\n",
+    "\n",
+    "cp = CaboCha.Parser(\"-r ../tools/usr/local/etc/cabocharc\")\n",
+    "print(cp.parse(\"この泉質は極上です\").toString(CaboCha.FORMAT_LATTICE))\n",
+    "print(cp.parse(\"この海鮮丼は美味しいです\").toString(CaboCha.FORMAT_LATTICE))\n",
+    "print(cp.parse(\"近くにスカイツリーがあります\").toString(CaboCha.FORMAT_LATTICE))\n",
+    "print(cp.parse(\"浴室にバスタオルがありません\").toString(CaboCha.FORMAT_LATTICE))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fd6ff0a-8772-4a04-9cf5-7102f8e66bbd",
+   "metadata": {},
+   "source": [
+    "#### A.1.2 辞書追加"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cee141c9-3d75-46be-a03f-96cf91a09ce6",
+   "metadata": {},
+   "source": [
+    "(1) 追加したい形態素の情報を CSV ファイル(user_dic.csv)に追記する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e434c851-29cc-48a4-81b2-33ecc779e4e1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!echo '\"泉質\",-1,-1,1,名詞,一般,*,*,*,*,泉質,センシツ,センシツ,USER\"' >> ../tools/usr/local/lib/mecab/dic/ipadic/user_dic.csv\n",
+    "!echo '\"海鮮丼\",-1,-1,1,名詞,一般,*,*,*,*,海鮮丼,カイセンドン,カイセンドン,USER\"' >> ../tools/usr/local/lib/mecab/dic/ipadic/user_dic.csv\n",
+    "!echo '\"スカイツリー\",-1,-1,1,名詞,一般,*,*,*,*,スカイツリー,スカイツリー,スカイツリー,USER\"' >> ../tools/usr/local/lib/mecab/dic/ipadic/user_dic.csv\n",
+    "!echo '\"バスタオル\",-1,-1,1,名詞,一般,*,*,*,*,バスタオル,バスタオル,バスタオル,USER\"' >> ../tools/usr/local/lib/mecab/dic/ipadic/user_dic.csv\n",
+    "!cat ../tools/usr/local/lib/mecab/dic/ipadic/user_dic.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b6c2b62-5e8e-4131-867e-076517607441",
+   "metadata": {},
+   "source": [
+    "(2) CSVファイル(user_dic.csv)をコンパイルして辞書(user.dic)を作成する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "606743a0-5ee1-4e69-9277-537a8a2c32a5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!../tools/usr/local/libexec/mecab/mecab-dict-index \\\n",
+    "-d ../tools/usr/local/lib/mecab/dic/ipadic \\\n",
+    "-u ../tools/usr/local/lib/mecab/dic/ipadic/user.dic \\\n",
+    "-f utf-8 -t utf-8 \\\n",
+    "../tools/usr/local/lib/mecab/dic/ipadic/user_dic.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0ddb3be-1784-42a6-accf-b5b793676dca",
+   "metadata": {},
+   "source": [
+    "#### A.1.3 辞書追加後の確認"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8643bcbf-6ae0-46bb-8a0f-4f5eba1ac74e",
+   "metadata": {},
+   "source": [
+    "(1) 辞書追加後に MeCab の解析結果を確認する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91884c97-9f2e-463f-983c-a5c5ee954aec",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import MeCab\n",
+    "\n",
+    "tagger = MeCab.Tagger(\"-r ../tools/usr/local/etc/mecabrc\")\n",
+    "print(tagger.parse(\"この泉質は極上です\"))\n",
+    "print(tagger.parse(\"この海鮮丼は美味しいです\"))\n",
+    "print(tagger.parse(\"近くにスカイツリーがあります\"))\n",
+    "print(tagger.parse(\"浴室にバスタオルがありません\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9c298dd-c2b3-489b-a172-9e0356a71eda",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "(2) 辞書追加後に CaboCha の解析結果を確認する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5dea6e3-2cf2-40b3-8184-45519787d614",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import CaboCha\n",
+    "\n",
+    "cp = CaboCha.Parser(\"-r ../tools/usr/local/etc/cabocharc\")\n",
+    "print(cp.parse(\"この泉質は極上です\").toString(CaboCha.FORMAT_LATTICE))\n",
+    "print(cp.parse(\"この海鮮丼は美味しいです\").toString(CaboCha.FORMAT_LATTICE))\n",
+    "print(cp.parse(\"近くにスカイツリーがあります\").toString(CaboCha.FORMAT_LATTICE))\n",
+    "print(cp.parse(\"浴室にバスタオルがありません\").toString(CaboCha.FORMAT_LATTICE))"
+   ]
   }
  ],
  "metadata": {
